styling cart page

--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -92,7 +92,7 @@
             <table>
                 <tr>
                     <td>Cart Subtotal</td>
-                    <td>2331</td>
+                    <td>$2331</td>
                 </tr>
                 <tr>
                     <td>Shipping</td>
@@ -100,7 +100,7 @@
                 </tr>
                 <tr>
                     <td><strong>Total</strong></td>
-                    <td><strong>2331</strong></td>
+                    <td><strong>$2331</strong></td>
                 </tr>
             </table>
             <button class="normal">Proceed to Checkout</button>
