deploy: e6d92f84cff924c94b6187a553c5504a47eb3a3a

--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -8,8 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/2c13fa7da5.js" crossorigin="anonymous"></script>
     <title>Shop2</title>
-  <script type="module" crossorigin src="/shop2/assets/app-BOqxyzUQ.js"></script>
-  <link rel="stylesheet" crossorigin href="/shop2/assets/app-zJp4KkDH.css">
+  <script type="module" crossorigin src="/shop2/assets/app-CMzMUrDe.js"></script>
+  <link rel="stylesheet" crossorigin href="/shop2/assets/app-BeX8UNTw.css">
 </head>
 
 <body>
@@ -94,7 +94,7 @@
             <table>
                 <tr>
                     <td>Cart Subtotal</td>
-                    <td>2331</td>
+                    <td>$2331</td>
                 </tr>
                 <tr>
                     <td>Shipping</td>
@@ -102,7 +102,7 @@
                 </tr>
                 <tr>
                     <td><strong>Total</strong></td>
-                    <td><strong>2331</strong></td>
+                    <td><strong>$2331</strong></td>
                 </tr>
             </table>
             <button class="normal">Proceed to Checkout</button>
