change of paths

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <h2>Featured Products</h2>
     <p>Summer Collection New Modern Design</p>
     <div class="pro-container">
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="./src/assets/img/adidas4.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -99,7 +99,7 @@
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
 
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="./src/assets/img/adidas3.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -115,7 +115,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="./src/assets/img/adidas2.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -131,7 +131,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="./src/assets/img/womens-1.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -147,7 +147,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="./src/assets/img/womens-2.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -163,7 +163,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="./src/assets/img/womens-3.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -179,7 +179,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="./src/assets/img/nike.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -195,7 +195,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="./src/assets/img/w1.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -225,7 +225,7 @@
     <h2>New Arrivals</h2>
     <p>Summer Collection New Modern Design</p>
     <div class="pro-container">
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="./src/assets/img/adidas.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -242,7 +242,7 @@
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
 
-      <div class="pro" onclick="window.location.href='sproduct3.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct3.html'">
         <img src="./src/assets/img/adidas2.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -258,7 +258,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct3.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct3.html'">
         <img src="./src/assets/img/adidas3.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -274,7 +274,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct3.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct3.html'">
         <img src="./src/assets/img/womens-1.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -290,7 +290,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="./src/assets/img/womens-2.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -306,7 +306,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="./src/assets/img/womens-3.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -322,7 +322,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="./src/assets/img/nike.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -338,7 +338,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="./src/assets/img/w1.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
