--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -41,7 +41,7 @@
       <h2>New Arrivals</h2>
       <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="../assets/img/adidas4.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -58,7 +58,7 @@
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
       
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="../assets/img/adidas3.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -74,7 +74,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="../assets/img/adidas2.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -90,7 +90,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="../assets/img/womens-1.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -106,7 +106,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="../assets/img/womens-2.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -122,7 +122,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="../assets/img/womens-3.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -138,7 +138,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="../assets/img/nike.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -154,7 +154,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="../assets/img/w1.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
