--- a/src/pages/sproduct2.html
+++ b/src/pages/sproduct2.html
@@ -12,21 +12,21 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="../../assets/img/adidas4.jpg" alt="logo" class="logo"> </a>
+        <a href="#"><img src="../assets/img/adidas4.jpg" alt="logo" class="logo"> </a>
         <div>
             <ul id="navbar">
-                <li><a href="../../../index.html" class="active">Home</a></li>
-                <li><a href="./src/pages/shop.html" class="active">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../../index.html" class="active">Home</a></li>
+                <li><a href="./shop.html" class="active">Shop</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class='bx bx-shopping-bag'></i></a></li>
                 <a href="#" id="close"><i class='bx bx-x'></i></a>
             </ul>
         </div>
 
         <div id="mobile">
-            <a href="cart.html"><i class='bx bx-shopping-bag'></i></a>
+            <a href="./cart.html"><i class='bx bx-shopping-bag'></i></a>
             <i class="fa-solid fa-outdent"></i>
         </div>
 
@@ -82,7 +82,7 @@
         <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/adidas4.jpg" alt="shoes">
+                <img src="../assets/img/adidas4.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/adidas3.jpg" alt="shoes">
+                <img src="../assets/img/adidas3.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -115,7 +115,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/adidas2.jpg" alt="shoes">
+                <img src="../assets/img/adidas2.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -131,7 +131,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/womens-1.jpg" alt="shoes">
+                <img src="../assets/img/womens-1.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -164,57 +164,60 @@
     </section>
 
 
-    <footer class="section-p1">
-        <div class="col">
-            <img src="./src/assets/img/headerM2.jpg" alt="" class="logo">
-            <h4>Contact</h4>
-            <p><strong>Address:</strong>Nowhere</p>
-            <p><strong>Phone:</strong>+77 777 777 777</p>
-            <p><strong>Hours</strong>06:00 - 18:00, Mon - Sat</p>
-            <div class="follow">
-                <h4>Follow Us</h4>
-                <div class="icon">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
+    <footer class="section-p1 footer">
+        <div class="footer-grid">
+            <div class="col">
+                <h4>Contact</h4>
+                <img src="../assets/img/headerM2.jpg" alt="" class="logo">
+                <p><strong>Address: </strong>Nowhere</p>
+                <p><strong>Phone: </strong>+77 777 777 777</p>
+                <p><strong>Hours: </strong>06:00 - 18:00, Mon - Sat</p>
+                <div class="follow">
+                    <h4>Follow Us</h4>
+                    <div class="icon">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col">
-            <h4>About</h4>
-            <a href="#">About us</a>
-            <a href="#">Delivery Information</a>
-            <a href="#">Primary Policy</a>
-            <a href="#">Terms & Conditions</a>
-            <a href="#">Contact us</a>
-        </div>
-        <div class="col">
-            <h4>My Account</h4>
-            <a href="#">Sign In</a>
-            <a href="#">View Cart</a>
-            <a href="#">My Wishlist</a>
-            <a href="#">Track My Orders</a>
-            <a href="#">Help</a>
-        </div>
-        <div class="col install">
-            <h4>Install App</h4>
-            <p>From App Store or Google Play</p>
-            <div class="row">
-                <img src="./src/assets/img/w1.jpg" alt="">
-                <img src="./src/assets/img/w1.jpg" alt="">
-
+            <div class="col">
+                <h4>About</h4>
+                <a href="#">About us</a>
+                <a href="#">Delivery Information</a>
+                <a href="#">Primary Policy</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Contact us</a>
             </div>
-            <p>Secured Follow Link (ctrl + click)</p>
-            <img src="./src/assets/img/cart-payments.png" alt="">
-        </div>
+            <div class="col">
+                <h4>My Account</h4>
+                <a href="#">Sign In</a>
+                <a href="#">View Cart</a>
+                <a href="#">My Wishlist</a>
+                <a href="#">Track My Orders</a>
+                <a href="#">Help</a>
+            </div>
+            <div class="col install">
+                <h4>Install App</h4>
+                <p>From App Store or Google Play</p>
+                <div class="row">
+                    <img src="../assets/img/app.jpg" alt="">
+                    <img src="../assets/img/play.jpg" alt="">
 
+                </div>
+                <p>Secured Follow Link (ctrl + click)</p>
+                <img src="../assets/img/cart-payments.png" alt="">
+            </div>
+        </div>
         <div class="copyright">
             <p>2025, All Rights Reserved</p>
         </div>
 
     </footer>
+
+    <script type="module" src="../app.js"></script>
 </body>
 
 </html>
