--- a/src/pages/sproduct.html
+++ b/src/pages/sproduct.html
@@ -12,21 +12,21 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="../../assets/img/adidas4.jpg" alt="logo" class="logo"> </a>
+        <a href="#"><img src="../assets/img/adidas4.jpg" alt="logo" class="logo"> </a>
         <div>
             <ul id="navbar">
-                <li><a href="../../../index.html" class="active">Home</a></li>
-                <li><a href="./src/pages/shop.html" class="active">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class='bx bx-shopping-bag'></i></a></li>
+                <li><a href="../../index.html" class="active">Home</a></li>
+                <li><a href="./shop.html" class="active">Shop</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li id="lg-bag"><a href="./cart.html"><i class='bx bx-shopping-bag'></i></a></li>
                 <a href="#" id="close"><i class='bx bx-x'></i></a>
             </ul>
         </div>
 
         <div id="mobile">
-            <a href="cart.html"><i class='bx bx-shopping-bag'></i></a>
+            <a href="./cart.html"><i class='bx bx-shopping-bag'></i></a>
             <i class="fa-solid fa-outdent"></i>
         </div>
 
@@ -34,7 +34,7 @@
 
     <section id="prodetails" class="section-p1">
         <div class="single-pro-image">
-            <img src="../assets/img/adidas.jpg" alt="shoe" id="maining">
+            <img src="../assets/img/adidas.jpg" alt="shoe" id="mainimg">
             <div class="small-img-group">
                 <div class="small-img-col">
                     <img src="../assets/img/adidas.jpg" class="smallimg" alt="">
@@ -69,7 +69,7 @@
                 <option>44</option>
                 <option>45</option>
             </select>
-            <input type="number" value="1">
+            <p>Quantity: <input type="number" value="1"></p>
             <button class="normal">Add To Cart</button>
             <h4>Product Details</h4>
             <span>Best Quality shoes for both men and women at reasonable price. Made with best quality raw material and
@@ -82,7 +82,7 @@
         <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/adidas4.jpg" alt="shoes">
+                <img src="../assets/img/adidas4.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/adidas3.jpg" alt="shoes">
+                <img src="../assets/img/adidas3.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -115,7 +115,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/adidas2.jpg" alt="shoes">
+                <img src="../assets/img/adidas2.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -131,7 +131,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct3.html'">
-                <img src="./src/assets/img/womens-1.jpg" alt="shoes">
+                <img src="../assets/img/womens-1.jpg" alt="shoes">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Sports Shoe</h5>
@@ -168,7 +168,7 @@
         <div class="footer-grid">
           <div class="col">
             <h4>Contact</h4>
-            <img src="./src/assets/img/headerM2.jpg" alt="" class="logo">
+            <img src="../assets/img/headerM2.jpg" alt="" class="logo">
             <p><strong>Address: </strong>Nowhere</p>
             <p><strong>Phone: </strong>+77 777 777 777</p>
             <p><strong>Hours: </strong>06:00 - 18:00, Mon - Sat</p>
@@ -203,12 +203,12 @@
             <h4>Install App</h4>
             <p>From App Store or Google Play</p>
             <div class="row">
-              <img src="./src/assets/img/app.jpg" alt="">
-              <img src="./src/assets/img/play.jpg" alt="">
+              <img src="../assets/img/app.jpg" alt="">
+              <img src="../assets/img/play.jpg" alt="">
     
             </div>
             <p>Secured Follow Link (ctrl + click)</p>
-            <img src="./src/assets/img/cart-payments.png" alt="">
+            <img src="../assets/img/cart-payments.png" alt="">
           </div>
         </div>
         <div class="copyright">
