--- a/src/pages/sproduct2.html
+++ b/src/pages/sproduct2.html
@@ -20,7 +20,7 @@
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class='bx bx-shopping-bag'></i></a></li>
+                <li id="lg-bag"><a href="./cart.html"><i class='bx bx-shopping-bag'></i></a></li>
                 <a href="#" id="close"><i class='bx bx-x'></i></a>
             </ul>
         </div>
@@ -69,7 +69,7 @@
                 <option>44</option>
                 <option>45</option>
             </select>
-            <input type="number" value="1">
+            <p>Quantity: <input type="number" value="1"></p>
             <button class="normal">Add To Cart</button>
             <h4>Product Details</h4>
             <span>Best Quality shoes for both men and women at reasonable price. Made with best quality raw material and
