deploy: 74217d563eca888eee6cc31794a37045018bbb15

--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -8,8 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/2c13fa7da5.js" crossorigin="anonymous"></script>
     <title>Shop2</title>
-  <script type="module" crossorigin src="/shop2/assets/app-CMzMUrDe.js"></script>
-  <link rel="stylesheet" crossorigin href="/shop2/assets/app-BeX8UNTw.css">
+  <script type="module" crossorigin src="/shop2/assets/app-tbDaSeUV.js"></script>
+  <link rel="stylesheet" crossorigin href="/shop2/assets/app-DXNqlVnp.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
       <h2>New Arrivals</h2>
       <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="/shop2/assets/adidas4-Ba-pZ803.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -60,7 +60,7 @@
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
       
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="/shop2/assets/adidas3-D-qMvozs.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -76,7 +76,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="/shop2/assets/adidas2-BdD_gSkf.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -92,7 +92,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct3.html'">
+            <div class="pro" onclick="window.location.href='./sproduct3.html'">
               <img src="/shop2/assets/womens-1-BGEFKvRn.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -108,7 +108,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="/shop2/assets/womens-2-Bv9ILH1Y.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -124,7 +124,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="/shop2/assets/womens-3-0bSJZ8fl.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -140,7 +140,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="/shop2/assets/nike-R0wvFGas.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
@@ -156,7 +156,7 @@
               </div>
               <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="pro" onclick="window.location.href='sproduct4.html'">
+            <div class="pro" onclick="window.location.href='./sproduct4.html'">
               <img src="/shop2/assets/w1-B5kmuEyc.jpg" alt="shoes">
               <div class="des">
                 <span>Adidas</span>
