--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/2c13fa7da5.js" crossorigin="anonymous"></script>
   <title>Shop2</title>
-  <script type="module" crossorigin src="/shop2/assets/app-CMzMUrDe.js"></script>
-  <link rel="stylesheet" crossorigin href="/shop2/assets/app-BeX8UNTw.css">
+  <script type="module" crossorigin src="/shop2/assets/app-tbDaSeUV.js"></script>
+  <link rel="stylesheet" crossorigin href="/shop2/assets/app-DXNqlVnp.css">
 </head>
 
 <body>
@@ -84,7 +84,7 @@
     <h2>Featured Products</h2>
     <p>Summer Collection New Modern Design</p>
     <div class="pro-container">
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="/shop2/assets/adidas4-Ba-pZ803.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -101,7 +101,7 @@
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
 
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="/shop2/assets/adidas3-D-qMvozs.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -117,7 +117,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="/shop2/assets/adidas2-BdD_gSkf.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -133,7 +133,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct.html'">
         <img src="/shop2/assets/womens-1-BGEFKvRn.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -149,7 +149,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="/shop2/assets/womens-2-Bv9ILH1Y.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -165,7 +165,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="/shop2/assets/womens-3-0bSJZ8fl.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -181,7 +181,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="/shop2/assets/nike-R0wvFGas.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -197,7 +197,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="/shop2/assets/w1-B5kmuEyc.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -227,7 +227,7 @@
     <h2>New Arrivals</h2>
     <p>Summer Collection New Modern Design</p>
     <div class="pro-container">
-      <div class="pro" onclick="window.location.href='sproduct2.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct2.html'">
         <img src="/shop2/assets/adidas-D7efOonh.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -244,7 +244,7 @@
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
 
-      <div class="pro" onclick="window.location.href='sproduct3.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct3.html'">
         <img src="/shop2/assets/adidas2-BdD_gSkf.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -260,7 +260,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct3.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct3.html'">
         <img src="/shop2/assets/adidas3-D-qMvozs.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -276,7 +276,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct3.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct3.html'">
         <img src="/shop2/assets/womens-1-BGEFKvRn.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -292,7 +292,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="/shop2/assets/womens-2-Bv9ILH1Y.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -308,7 +308,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="/shop2/assets/womens-3-0bSJZ8fl.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -324,7 +324,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="/shop2/assets/nike-R0wvFGas.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
@@ -340,7 +340,7 @@
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
-      <div class="pro" onclick="window.location.href='sproduct4.html'">
+      <div class="pro" onclick="window.location.href='./src/pages/sproduct4.html'">
         <img src="/shop2/assets/w1-B5kmuEyc.jpg" alt="shoes">
         <div class="des">
           <span>Adidas</span>
