--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -8,8 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/2c13fa7da5.js" crossorigin="anonymous"></script>
     <title>Shop2</title>
-  <script type="module" crossorigin src="/shop2/assets/app-CMzMUrDe.js"></script>
-  <link rel="stylesheet" crossorigin href="/shop2/assets/app-BeX8UNTw.css">
+  <script type="module" crossorigin src="/shop2/assets/app-tbDaSeUV.js"></script>
+  <link rel="stylesheet" crossorigin href="/shop2/assets/app-DXNqlVnp.css">
 </head>
 
 <body>
@@ -17,18 +17,18 @@
         <a href="#"><img src="/shop2/assets/adidas4-Ba-pZ803.jpg" alt="logo" class="logo"> </a>
         <div>
             <ul id="navbar">
-                <li><a href="../../../index.html" class="active">Home</a></li>
+                <li><a href="../../index.html" class="active">Home</a></li>
                 <li><a href="./src/pages/shop.html" class="active">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class='bx bx-shopping-bag'></i></a></li>
+                <li id="lg-bag"><a href="./cart.html"><i class='bx bx-shopping-bag'></i></a></li>
                 <a href="#" id="close"><i class='bx bx-x'></i></a>
             </ul>
         </div>
 
         <div id="mobile">
-            <a href="cart.html"><i class='bx bx-shopping-bag'></i></a>
+            <a href="./cart.html"><i class='bx bx-shopping-bag'></i></a>
             <i class="fa-solid fa-outdent"></i>
         </div>
 
