--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <section id="header">
     <a href="#"><img src="src/assets/img/adidas4.jpg" alt="logo" class="logo"> </a>
     <div>
-      <ul id="navbar">
+      <ul class="navbar" id="navbar">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="./src/pages/shop.html">Shop</a></li>
         <li><a href="./src/pages/blog.html">Blog</a></li>
         <li><a href="./src/pages/about.html">About</a></li>
         <li><a href="./src/pages/contact.html">Contact</a></li>
         <li id="lg-bag"><a href="./src/pages/cart.html"><i class='bx bx-shopping-bag'></i></a></li>
-        <a href="#" id="close"><i class='bx bx-x'></i></a>
+        <a href="#" class="close"><i class='bx bx-x'></i></a>
       </ul>
     </div>
 
-    <div id="mobile">
+    <div class="mobile" id="mobile">
       <a href="./src/pages/cart.html"><i class='bx bx-shopping-bag'></i></a>
       <i class="fa-solid fa-outdent"></i>
     </div>
