--- a/src/pages/sproduct2.html
+++ b/src/pages/sproduct2.html
@@ -14,18 +14,18 @@
     <section id="header">
         <a href="#"><img src="../assets/img/adidas4.jpg" alt="logo" class="logo"> </a>
         <div>
-            <ul id="navbar">
+            <ul class="navbar" id="navbar">
                 <li><a href="../../index.html" class="active">Home</a></li>
                 <li><a href="./shop.html" class="active">Shop</a></li>
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="./cart.html"><i class='bx bx-shopping-bag'></i></a></li>
-                <a href="#" id="close"><i class='bx bx-x'></i></a>
+               
+                <a href="#" class="close"><i class='bx bx-x'></i></a>
             </ul>
         </div>
 
-        <div id="mobile">
+        <div class="mobile" id="mobile">
             <a href="./cart.html"><i class='bx bx-shopping-bag'></i></a>
             <i class="fa-solid fa-outdent"></i>
         </div>
