deploy: 08bd52865c6571499438e0a0c2c7275bb2707851

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/2c13fa7da5.js" crossorigin="anonymous"></script>
   <title>Shop2</title>
-  <script type="module" crossorigin src="/shop2/assets/app-tbDaSeUV.js"></script>
-  <link rel="stylesheet" crossorigin href="/shop2/assets/app-DXNqlVnp.css">
+  <script type="module" crossorigin src="/shop2/assets/app-BZ3x1ghd.js"></script>
+  <link rel="stylesheet" crossorigin href="/shop2/assets/app-UTIEbk7Z.css">
 </head>
 
 <body>
@@ -17,18 +17,18 @@
   <section id="header">
     <a href="#"><img src="/shop2/assets/adidas4-Ba-pZ803.jpg" alt="logo" class="logo"> </a>
     <div>
-      <ul id="navbar">
+      <ul class="navbar" id="navbar">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="./src/pages/shop.html">Shop</a></li>
         <li><a href="./src/pages/blog.html">Blog</a></li>
         <li><a href="./src/pages/about.html">About</a></li>
         <li><a href="./src/pages/contact.html">Contact</a></li>
         <li id="lg-bag"><a href="./src/pages/cart.html"><i class='bx bx-shopping-bag'></i></a></li>
-        <a href="#" id="close"><i class='bx bx-x'></i></a>
+        <a href="#" class="close"><i class='bx bx-x'></i></a>
       </ul>
     </div>
 
-    <div id="mobile">
+    <div class="mobile" id="mobile">
       <a href="./src/pages/cart.html"><i class='bx bx-shopping-bag'></i></a>
       <i class="fa-solid fa-outdent"></i>
     </div>
